test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 27 Mar 2026 13:20:46 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="liVbVZeFNWc6ksAqWlv+6rQ0ulrnl7Pi", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}